# jamvm

./: A.java  CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.in  access.lo  alloc.lo  cast.lo  class.lo  config.h  config.h.in  dll.lo  dll_ffi.lo  execute.lo  hash.lo  hooks.lo  init.lo  jamvm  jni-stubs.lo  jni.lo  libcore.la  libjvm.la  lock.lo  natives.lo  reflect.lo  resolve.lo  shutdown.lo  sig.lo  string.lo  stubs.lo  symbol.lo  utf8.lo  zip.lo
src/.deps/: access.Plo  alloc.Plo  cast.Plo  class.Plo  dll.Plo  dll_ffi.Plo  excep.Plo  execute.Plo  frame.Plo  hash.Plo  hooks.Plo  init.Plo  jam.Po  jni-stubs.Plo  jni.Plo  lock.Plo  natives.Plo  properties.Plo  reflect.Plo  resolve.Plo  shutdown.Plo  sig.Plo  string.Plo  stubs.Plo  symbol.Plo  thread.Plo  time.Plo  utf8.Plo  zip.Plo
src/.libs/: libjvm.lai
src/arch/: Makefile  Makefile.in
src/classlib/: Makefile  Makefile.in
src/classlib/gnuclasspath/: Makefile  Makefile.in  annotations.lo  excep.lo  frame.lo  libclasslib.la  properties.lo  thread.lo
src/classlib/gnuclasspath/.deps/: alloc.Plo  annotations.Plo  class.Plo  dll.Plo  excep.Plo  frame.Plo  jni.Plo  natives.Plo  properties.Plo  reflect.Plo  thread.Plo
src/classlib/gnuclasspath/lib/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/gnu/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/gnu/classpath/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/jamvm/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/jamvm/java/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/jamvm/java/lang/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/java/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/java/lang/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/java/lang/reflect/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/java/security/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/sun/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/sun/reflect/: Makefile  Makefile.in
src/classlib/gnuclasspath/lib/sun/reflect/annotation/: Makefile  Makefile.in
src/classlib/openjdk/: Makefile  Makefile.in
src/interp/: Makefile  Makefile.in  direct.lo  inlining.lo  libinterp.la  relocatability.inc
src/interp/.deps/: direct.Plo  inlining.Plo
src/interp/engine/: Makefile  Makefile.in  compute_relocatability  interp.lo  interp2.lo  libengine.la  relocatability.lo
src/interp/engine/.deps/: compute_relocatability.Po  interp.Plo  interp2.Plo  relocatability.Plo
src/os/: Makefile  Makefile.in
src/os/bsd/: Makefile  Makefile.in
src/os/bsd/arm/: Makefile  Makefile.in
src/os/bsd/i386/: Makefile  Makefile.in
src/os/bsd/powerpc/: Makefile  Makefile.in
src/os/bsd/sparc/: Makefile  Makefile.in
src/os/bsd/x86_64/: Makefile  Makefile.in
src/os/darwin/: Makefile  Makefile.in
src/os/darwin/arm/: Makefile  Makefile.in
src/os/darwin/i386/: Makefile  Makefile.in
src/os/darwin/powerpc/: Makefile  Makefile.in
src/os/linux/: Makefile  Makefile.in  libos.la  os.lo
src/os/linux/.deps/: os.Plo
src/os/linux/arm/: Makefile  Makefile.in
src/os/linux/i386/: Makefile  Makefile.in
src/os/linux/mips/: Makefile  Makefile.in
src/os/linux/parisc/: Makefile  Makefile.in
src/os/linux/powerpc/: Makefile  Makefile.in
src/os/linux/x86_64/: Makefile  Makefile.in  callNative.lo  dll_md.lo  libnative.la
src/os/linux/x86_64/.deps/: dll_md.Plo
src/os/solaris/: Makefile  Makefile.in
src/os/solaris/x86/: Makefile  Makefile.in
